[package]
name = "chowkidar"
version = "0.1.0"
edition = "2021"
authors = ["Ayaan Zaidi <zaidi@vume.in>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
aws_lambda_events = "0.15.1"
lambda_runtime = "0.8.3"
once_cell = "1.20.2"
reqwest = { version = "0.11.27", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "fmt",
] }
